--- a/src/core/components/ui/help/help.css
+++ b/src/core/components/ui/help/help.css
@@ -6,7 +6,7 @@
 
 /* Normal Mode Help - Top Right */
 .mostage-help {
-  position: fixed;
+  position: absolute;
   top: 30px;
   right: 30px;
   background: rgba(0, 0, 0, 0.8);
